# DorkManager

./: .gitignore  README.md  dork-manager.cabal  flake.nix  moveMovies  movie.nfo  tui
.github/workflows/: haskell.yml
nix/: hix.nix
src/: Episodic.hs  JSON.hs  Main.hs  Movies.hs  NFO.hs  Nfo.hs  Sort.hs  Types.hs
