cabal-version: 3.6

name: dork-manager
version: 0.0.0.1

common shared-libs
  build-depends:  base >=4.11 && <4.18
                -- , random
                -- , random-shuffle
                , memory
                , filepath
                -- , http-conduit
                , time
                , bytestring
                -- , aeson
                , vector
                , unordered-containers
                , text
                , containers
                -- , cryptohash-sha256
                -- , crypton
                -- , scientific
                , directory
  ghc-options: -O2

executable fetchStats
  import: shared-libs
  hs-source-dirs: src
  main-is: Sort.hs
  other-modules:  Types
  -- build-depends:  async
