cabal-version: 3.6

name: dork-manager
version: 0.0.0.1

common shared-libs
  build-depends:  base >=4.11 && <4.18
                , memory
                , filepath
                , time
                , bytestring
                , vector
                , unordered-containers
                , text
                , containers
                , directory
                , optparse-applicative
                , xml-conduit
                , aeson
  ghc-options: -O2

executable parseMovie
  import: shared-libs
  hs-source-dirs: src
  main-is: Sort.hs
  other-modules:  Movies
  build-depends:  xml-conduit
